retrieveUnpackaged/objects/Release_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Aprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Version__c</fullName>
        <label>Release Version</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Release Approvals</relationshipLabel>
        <relationshipName>Release_Approvals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Release Approval</label>
    <nameField>
        <displayFormat>R-{0000000}</displayFormat>
        <label>Release Approval</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>